--- a/reward.yml
+++ b/reward.yml
@@ -8,4 +8,7 @@ spring:
     url: jdbc:mysql://39.106.10.102:3306/test1?useUnicode=true&amp;characterEncoding=UTF8
 server:
   port: 9091
+mobile:
+  kefu:188,112,121
+  fengkong:112,12331,111
   
