--- a/reward.yml
+++ b/reward.yml
@@ -9,6 +9,6 @@ spring:
 server:
   port: 9091
 mobile:
-  kefu: 188,112,121
-  fengkong: 112,12331,111
+  kefu: 188,112,12199999
+  fengkong: 112,12331,11133
   
