--- a/reward.yml
+++ b/reward.yml
@@ -6,6 +6,14 @@ spring:
     username: zkbc
     password: password
     url: jdbc:mysql://39.106.10.102:3306/test1?useUnicode=true&amp;characterEncoding=UTF8
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  redis:
+    host: 192.168.30.77
+    port: 6379  
 server:
   port: 9091
 mobile:
