--- a/invest.yml
+++ b/invest.yml
@@ -10,16 +10,18 @@ spring:
       hibernate:
         ddl-auto: none
   datasource:
-    url: jdbc:mysql://39.106.10.102:3306/dtest1?useUnicode=true&amp;characterEncoding=UTF8
-    data-username: zkbc
-    data-password: password
     driver-class-name: com.mysql.jdbc.Driver
-
+    username: zkbc
+    password: password
+    url: jdbc:mysql://39.106.10.102:3306/test1?useUnicode=true&amp;characterEncoding=UTF8
   rabbitmq:
-         host: localhost
-         port: 5672
-         username: guest
-         password: guest
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  redis:
+    host: 192.168.30.77
+    port: 6379 
 
 feign:
   hystrix:
