--- a/user.yml
+++ b/user.yml
@@ -1,21 +1,19 @@
-eureka:
-  client:
-    serviceUrl:
-      defaultZone: http://localhost:8761/eureka/
-server:
-  port: 9020
 spring:
   application:
-    name: xycuser
-
-#datasource config
-jdbc:
-  driverClassName: com.mysql.jdbc.Driver
-  url: jdbc:mysql://192.168.100.103:3308/dtest1?useUnicode=true&amp;characterEncoding=UTF8
-  username: zkbc
-  password: password
-
-#mybatis config
-mybatis:
-  typeAliasesPackage: com.xyc.user.model
-  mapperLocations: classpath:../dao/*.xml
+    name: user
+  datasource:
+    driver-class-name: com.mysql.jdbc.Driver
+    username: zkbc
+    password: password
+    url: jdbc:mysql://39.106.10.102:3306/test1?useUnicode=true&amp;characterEncoding=UTF8
+  rabbitmq:
+    host: localhost
+    port: 5672
+    username: guest
+    password: guest
+  redis:
+    host: localhost
+    port: 6379  
+server:
+  port: 9020
+ 
