--- a/capital.yml
+++ b/capital.yml
@@ -19,4 +19,14 @@ server:
 mobile:
   kefu: 188,112,12199999
   fengkong: 112,12331,11133
+jdbc:
+  jdbcDriver: com.mysql.jdbc.Driver
+  jdbcUrl: jdbc:mysql://39.106.10.102:3306/test1?useUnicode=true&amp;characterEncoding=UTF8
+  jdbcUserName: zkbc
+  jdbcPassword: password
+
+mybatisConfigFilePath: mybatis-config.xml
+mapperPath: /mapper/**.xml
+entityPackage: com.xyc.capital.entity  
+  
   
