--- a/invest.yml
+++ b/invest.yml
@@ -23,9 +23,43 @@ spring:
     host: 192.168.30.77
     port: 6379 
 
+spring:
+  application:
+    name: invest
+  zipkin:
+    enabled: true
+    # zipkkin dashboard的地址：通过真实IP地址访问
+    baseUrl: http://localhost:9411/
+    # 通过cloud-dashboard-zipkin注册到注册中心的服务名称访问，本版本(spring-cloud-sleuth-core-1.2.5.RELEASE)不支持，需要从spring-cloud-sleuth-core-1.3.0.RELEASE开始支持这个功能
+    # 配置如下：
+    # baseUrl: http://cloud-dashboard-zipkin/
+    sleuth:
+    sampler:
+     #  默认值为0.1f，现在为了测试设置100%采集
+     percentage: 1
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds:  5000
 feign:
   hystrix:
     enabled: true
+logging:
+  level:
+    org.springframework.cloud.openfeign: debug
+
+jdbc:
+  jdbcDriver: com.mysql.jdbc.Driver
+  jdbcUrl: jdbc:mysql://39.106.10.102:3306/guns?useUnicode=true&amp;characterEncoding=UTF8
+  jdbcUserName: zkbc
+  jdbcPassword: password
+mybatisConfigFilePath: mybatis-config.xml
+mapperPath: /mapper/**.xml
+entityPackage: com.xyc.invest.model
+
 evn:
   testb333cc
 
