--- a/reward.yml
+++ b/reward.yml
@@ -14,6 +14,12 @@ spring:
   redis:
     host: 192.168.30.77
     port: 6379  
+  zipkin:
+    base-url: http://localhost:9411/
+  sleuth:
+    sampler:
+     #  默认值为0.1f，现在为了测试设置100%采集
+     percentage: 1
 
 mobile:
   kefu: 188,112,121ddd
